--- a/src/App.css
+++ b/src/App.css
@@ -54,32 +54,63 @@ body {
 }
 
 .website {
-	font-family: Inter;
-	font-size: 10px;
-	font-weight: 400;
-	line-height: 15px;
-	letter-spacing: 0em;
 	text-align: center;
+	padding: 9px;
+}
+
+.buttons {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 12px;
+	margin-top: 20px;
+}
+
+.buttons .email,
+.buttons .linkedin {
+	display: flex;
+	align-items: center;
+	gap: 8px;
+	padding: 9px 28px;
+	border-radius: 6px;
+	border: 1px solid;
+	cursor: pointer;
+	margin-left: 17px;
 }
 
 .email {
-	width: 115px;
-	height: 34px;
-	top: 468px;
-	left: 151px;
-	border-radius: 6px;
-	border: 1px solid #000;
-	padding: 9px 13px 9px 11px;
-	gap: 8px;
 	color: #374151;
+	background-color: #ffffff;
+	padding: 80px;
 }
+
 .linkedin {
-	width: 115px;
-	height: 34px;
-	top: 468px;
-	left: 283px;
-	border-radius: 6px;
-	padding: 9px 13px 9px 11px;
-	gap: 8px;
-	background-color: #5093e2;
+	color: #ffffff;
+	background-color: #297fe5;
+}
+
+.buttons .email::before {
+	content: url('./images/Mail.png');
+	width: 30px;
+	height: 17px;
+}
+
+.buttons .linkedin::before {
+	content: url('./images/linkedin.png');
+	font-size: 10px;
+	width: 20px;
+	height: 17px;
+}
+
+.about {
+	width: 243px;
+	height: 21px;
+	top: 535px;
+	left: 152px;
+	font-family: Inter;
+	font-size: 16px;
+	font-weight: 700;
+	line-height: 24px;
+	letter-spacing: 0em;
+	text-align: left;
 }
