--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body {
 }
 
 .card {
+	position: relative;
 	width: 550px;
 	height: 868px;
 	top: 53px;
@@ -113,4 +114,95 @@ body {
 	line-height: 24px;
 	letter-spacing: 0em;
 	text-align: left;
+	margin-top: 33px;
+}
+
+.me {
+	width: 247px;
+	height: 61px;
+	top: 561px;
+	left: 152px;
+	font-family: Inter;
+	font-size: 10px;
+	font-weight: 400;
+	line-height: 15px;
+	letter-spacing: 0em;
+	text-align: left;
+	color: #dcdcdc;
+	padding-top: 5px;
+}
+
+.interests {
+	width: 243px;
+	height: 21px;
+	top: 649px;
+	left: 152px;
+	font-family: Inter;
+	font-size: 16px;
+	font-weight: 700;
+	line-height: 24px;
+	letter-spacing: 0em;
+	text-align: left;
+	color: #f5f5f5;
+	margin-top: 5px;
+}
+
+.info {
+	width: 247px;
+	height: 61px;
+	top: 675px;
+	left: 152px;
+	font-family: Inter;
+	font-size: 10px;
+	font-weight: 400;
+	line-height: 15px;
+	letter-spacing: 0em;
+	text-align: left;
+	color: #dcdcdc;
+	margin-top: 5px;
+}
+
+.footer {
+	width: 317px;
+	height: 64px;
+	top: 760px;
+	left: 116px;
+	border-radius: 0px 0px 10px 10px;
+	background-color: #161619;
+}
+
+.footer-icons {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+.twitter {
+	width: 25px;
+	height: 25px;
+	top: 779px;
+	left: 189px;
+	color: #918e9b;
+}
+
+.facebook {
+	width: 25px;
+	height: 25px;
+	top: 779px;
+	left: 238px;
+	color: #918e9b;
+}
+.instagram {
+	width: 25px;
+	height: 25px;
+	top: 779px;
+	left: 287px;
+	color: #918e9b;
+}
+
+.github {
+	width: 25px;
+	height: 25px;
+	top: 780px;
+	left: 336px;
+	color: #918e9b;
 }
