--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ body {
 	padding: 44px 117px 44px 116px;
 	border-radius: 10px;
 	background-color: #1a1b21;
+	background-color: red;
 }
 
 .picture {
