--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body {
 	align-items: center;
 	position: relative;
 	width: 100%;
-	height: 868px;
+	height: 830px;
 	top: 36px;
 	left: 65px;
 	border-radius: 10px;
@@ -72,6 +72,7 @@ body {
 
 .buttons .email,
 .buttons .linkedin {
+	position: relative;
 	display: flex;
 	align-items: center;
 	gap: 8px;
@@ -83,26 +84,32 @@ body {
 }
 
 .email {
-	color: #374151;
 	background-color: #ffffff;
 	padding: 80px;
 }
+.text1 {
+	color: #374151;
+}
 
 .linkedin {
-	color: #ffffff;
-	background-color: #297fe5;
+	background-color: #5093e2;
+	right: 15px;
+}
+
+.text2 {
+	color: white;
 }
 
 .buttons .email::before {
 	content: url('./images/Mail.png');
-	width: 30px;
+	width: 20px;
 	height: 17px;
 }
 
 .buttons .linkedin::before {
 	content: url('./images/linkedin.png');
 	font-size: 10px;
-	width: 20px;
+	width: 10px;
 	height: 17px;
 }
 
@@ -131,7 +138,7 @@ body {
 	letter-spacing: 0em;
 	text-align: left;
 	color: #f5f5f5;
-	margin-top: 30px;
+	margin-top: 20px;
 }
 .me {
 	width: 247px;
